Changed in route definitions: community_id -> communitiId member_id -> memberId
