# openapi.yaml
@@ -118,7 +118,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /balance/{communityId}/{member_id}:
+  /balance/{communityId}/{memberId}:
     get:
       tags:
         - Dashboard
@@ -134,7 +134,7 @@ paths:
             type: integer
           description: Community ID
           example: 1
-        - name: member_id
+        - name: memberId
           in: path
           required: true
           schema:
@@ -173,7 +173,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /transactions/{communityId}/{member_id}:
+  /transactions/{communityId}/{memberId}:
     get:
       tags:
         - Dashboard
@@ -189,7 +189,7 @@ paths:
             type: integer
           description: Community ID
           example: 1
-        - name: member_id
+        - name: memberId
           in: path
           required: true
           schema:
